--- a/package.json
+++ b/package.json
@@ -8,19 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~37.0.3",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
+    "expo": "^37.0.0",
+    "expo-svg-uri": "^1.1.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "^0.11.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "@types/styled-components": "^5.1.0",
+    "babel-preset-expo": "^8.1.0",
+    "typescript": "^3.8.3"
   },
   "private": true
 }
