--- a/package.json
+++ b/package.json
@@ -8,28 +8,51 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/native": "^5.5.1",
-    "@react-navigation/stack": "^5.5.1",
-    "expo": "^37.0.0",
-    "expo-svg-uri": "^1.1.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
+    "@use-expo/font": "^2.0.0",
+    "axios": "^0.19.2",
+    "expo": "~37.0.3",
+    "expo-blur": "~8.1.0",
+    "expo-constants": "~9.0.0",
+    "expo-linear-gradient": "~8.1.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dotenv": "^0.2.0",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-safe-area-context": "0.7.3",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-svg": "^12.1.0",
-    "react-native-web": "^0.11.7",
+    "react-native-shared-element": "^0.7.0",
+    "react-native-svg": "11.0.1",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-web": "~0.11.7",
+    "react-navigation-shared-element": "^5.0.0-alpha1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.22",
+    "@types/react": "~16.9.23",
+    "@types/react-native": "~0.61.17",
     "@types/styled-components": "^5.1.0",
-    "babel-preset-expo": "^8.1.0",
-    "typescript": "^3.8.3"
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-preset-expo": "~8.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-typescript": "^8.0.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "prettier": "^2.0.5",
+    "typescript": "~3.8.3"
   },
   "private": true
 }
