--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "width": "200",
+      "backgroundColor": "#ec1d24"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
